Git_WGBH_QC/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Previous_Year_Amount__c</fullName>
        <formula>IF( YEAR( CloseDate ) = YEAR(TODAY()) - 1 , Amount , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Opportunity__c</fullName>
        <label>Parent Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Giving Installments</relationshipLabel>
        <relationshipName>Giving_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <label>Recurring Donation</label>
        <referenceTo>Recurring_Donation__c</referenceTo>
        <relationshipLabel>Pledges &amp; Payments</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Type__c</fullName>
        <label>Refund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refused_Reason__c</fullName>
        <label>Refused Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cannot Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Commitment Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports Other non-profits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBUR 90.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t get premium/response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel 11 or Channel 36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refuses all telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>can&apos;t receive signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports Auction Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to Add gift to Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gave Already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped from Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to give a Gift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder_Sent_Date__c</fullName>
        <description>The date the reminder for this gift was pulled.</description>
        <inlineHelpText>Date indicates when the reminder for the gift was sent.</inlineHelpText>
        <label>Reminder Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating the reminder for this pledge/payment has been sent.</description>
        <inlineHelpText>If checked the reminder for this gift has been sent.</inlineHelpText>
        <label>Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System will delete all pledges with stage Solicited and gift date is older than 3 months.</description>
        <label>Remove Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Mechanism__c</fullName>
        <label>Response Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Call Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesale Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_message__c</fullName>
        <label>Response_message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Date__c</fullName>
        <label>Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_GIVING_NUMBER__c</fullName>
        <displayFormat>G{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Giving Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Opportunity_ID__c</fullName>
        <description>Unique Opportunity ID to pass as an Alt ID to Team Approach, will allow us to map the Opportunity to the payment from TA</description>
        <inlineHelpText>Unique Salesforce ID which allows us to match the opportunity record on the contact or household to the payment</inlineHelpText>
        <label>SFDC Opportunity ID DELETE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiply By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divide By</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Gift_Type__c</fullName>
        <formula>if (ISBLANK(TEXT(Override_Gift_Type__c)), text(gift_type__c), text(Override_Gift_Type__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Gift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitation_Type__c</fullName>
        <label>Solicitation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <inlineHelpText>Account Manager responsible for the relationship with this household or organization</inlineHelpText>
        <label>Account Manager</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical Radio Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stretch_Amount__c</fullName>
        <description>The amount that a Prospect is likely to donate within the Moves Management process</description>
        <label>Stretch Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submission_Count__c</fullName>
        <formula>TRANSACTION_BATCH__r.Submit_Count__c</formula>
        <label>Submission Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Designation__c</fullName>
        <label>Support Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Account_ID__c</fullName>
        <label>TA Account ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANSACTION_BATCH__c</fullName>
        <label>TRANSACTION BATCH</label>
        <referenceTo>TRANSACTION_BATCH__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaTransactions_Id__c</fullName>
        <description>TA Transactions external Id</description>
        <externalId>true</externalId>
        <label>TA Transactions Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Amount__c</fullName>
        <formula>IF( ( ISPICKVAL( StageName, &apos;Partially Fulfilled&apos;) || ISPICKVAL (StageName, &apos;Fulfilled&apos;) ), ( ( (if(ISNULL(payment_number__c)||payment_number__c=0,1,payment_number__c) - 1) * installment_amount__c) +  if(paid_amount__c&gt;0,paid_amount__c,payment_amount__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>CASE(
Schedule_Type__c ,
&quot;Multiply By&quot;, Installments__c * installment_amount__c ,
&quot;Divide By&quot;, installment_amount__c
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number - DEPRECATED</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Description__c</fullName>
        <label>Tribute Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tribute_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tribute Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tribute_Name__c</fullName>
        <label>Tribute Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <label>Tribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Honor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>activity__c</fullName>
        <label>Activity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type__c</fullName>
        <description>Activity Type</description>
        <inlineHelpText>Activity Type</inlineHelpText>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type_value__c</fullName>
        <label>Activity Type Value</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adj_gift_seq__c</fullName>
        <description>Adj Gift Seq</description>
        <inlineHelpText>Adj Gift Seq</inlineHelpText>
        <label>Adj Gift Seq</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adjustment_seq__c</fullName>
        <description>Adjustment Seq</description>
        <inlineHelpText>Adjustment Seq</inlineHelpText>
        <label>Adjustment Seq</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alt_transaction_id__c</fullName>
        <description>Convio Transaction ID</description>
        <label>Convio Transaction ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>anonymous_code__c</fullName>
        <label>Anonymous Code</label>
        <picklist>
            <picklistValues>
                <fullName>Do not list this gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not list participation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>anonymous_code_value__c</fullName>
        <description>Anonymous Code</description>
        <inlineHelpText>Anonymous Code</inlineHelpText>
        <label>Anonymous Code Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_number__c</fullName>
        <description>Batch Number</description>
        <inlineHelpText>Batch Number</inlineHelpText>
        <label>Batch Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bequest__c</fullName>
        <label>Planned Giving</label>
        <referenceTo>Bequest__c</referenceTo>
        <relationshipLabel>Giving</relationshipLabel>
        <relationshipName>Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>caller__c</fullName>
        <label>Caller</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>check_name__c</fullName>
        <description>Check Name</description>
        <inlineHelpText>Check Name</inlineHelpText>
        <label>Check Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commitment_date__c</fullName>
        <description>Commitment Date - This is used with Stock</description>
        <inlineHelpText>Commitment Date</inlineHelpText>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>current_activity__c</fullName>
        <description>Current Activity</description>
        <inlineHelpText>Current Activity</inlineHelpText>
        <label>Current Activity</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_giving_level_amt__c</fullName>
        <description>Current Giving Level Amt</description>
        <inlineHelpText>Current Giving Level Amt</inlineHelpText>
        <label>Current Giving Level Amt $</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_updated__c</fullName>
        <description>Date Updated</description>
        <inlineHelpText>Date Updated</inlineHelpText>
        <label>Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>effort__c</fullName>
        <label>Effort</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fund__c</fullName>
        <inlineHelpText>Example Mr and Mrs Test Endowed Fund for the Humanities or Arts</inlineHelpText>
        <label>Fund</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fund_type__c</fullName>
        <label>Fund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted, Non-Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fund_type_value__c</fullName>
        <description>Fund Type</description>
        <inlineHelpText>Fund Type</inlineHelpText>
        <label>Fund Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_date__c</fullName>
        <description>Gift Date</description>
        <inlineHelpText>Gift Date</inlineHelpText>
        <label>Gift Date OLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gift_description__c</fullName>
        <description>Gift Description - This is used with Stock</description>
        <inlineHelpText>Gift Description</inlineHelpText>
        <label>Gift Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_kind__c</fullName>
        <label>Gift Kind</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining Gift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gift_kind_value__c</fullName>
        <description>Gift Kind</description>
        <inlineHelpText>Gift Kind</inlineHelpText>
        <label>Gift Kind Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_seq__c</fullName>
        <description>Gift Seq</description>
        <inlineHelpText>Gift Seq</inlineHelpText>
        <label>Gift Seq</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add Gift</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Reset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gift_type_value__c</fullName>
        <description>Gift Type</description>
        <inlineHelpText>Gift Type</inlineHelpText>
        <label>Gift Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_value__c</fullName>
        <description>Gift Value - This is used with Stock</description>
        <inlineHelpText>Gift Value</inlineHelpText>
        <label>Gift Value</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>group_type__c</fullName>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mid-level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Bidders/Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership (Basic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service/MDSi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving/PBSd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation/Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweeps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Pledges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test 06/24/02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>group_type_value__c</fullName>
        <description>Group Type</description>
        <inlineHelpText>Group Type</inlineHelpText>
        <label>Group Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>initiative__c</fullName>
        <label>Initiative</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installment_amount__c</fullName>
        <description>Installment Amount</description>
        <inlineHelpText>Installment Amount</inlineHelpText>
        <label>Installment Amount $</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_payment_date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>list__c</fullName>
        <label>List</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_install_ment_date__c</fullName>
        <description>Installment date for recurring pledge</description>
        <inlineHelpText>Installment date for recurring pledge</inlineHelpText>
        <label>Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>new_installment_amount__c</fullName>
        <label>Installment Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>package__c</fullName>
        <label>Package</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <description>Paid Amount</description>
        <inlineHelpText>Paid Amount</inlineHelpText>
        <label>Paid Amt $</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_amount__c</fullName>
        <description>Payment Amount</description>
        <inlineHelpText>Payment Amount</inlineHelpText>
        <label>Payment Amount $</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>payment_frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular Schedule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_frequency_value__c</fullName>
        <description>Payment Frequency</description>
        <inlineHelpText>Payment Frequency</inlineHelpText>
        <label>Payment Frequency Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>